# fdreadoutlibs

./: CMakeLists.txt
cmake/: fdreadoutlibsConfig.cmake.in
docs/: README.md
include/fdreadoutlibs/: DAPHNEStreamSuperChunkTypeAdapter.hpp  DAPHNESuperChunkTypeAdapter.hpp  DUNEWIBEthTypeAdapter.hpp  DUNEWIBFirmwareTriggerPrimitiveSuperChunkTypeAdapter.hpp  DUNEWIBSuperChunkOverlay.hpp  DUNEWIBSuperChunkTypeAdapter.hpp  DUNEWIBTriggerPrimitiveOverlay.hpp  FDReadoutTypes.hpp  FDReadoutTypes_old.hpp  ProtoWIBSuperChunkOverlay.hpp  ProtoWIBSuperChunkTypeAdapter.hpp  RawFW_WIB_TriggerPrimitive.hpp  SSPFrameTypeAdapter.hpp  SW_DUNEWIB_TriggerPrimitive.hpp  SW_ProtoWIB_TriggerPrimitive.hpp  TDEAMC.hpp  TDEAMCFrameTypeAdapter.hpp  TDEFrameTypeAdapter.hpp  TriggerPrimitiveTypeAdapter.hpp  VariableSizePayloadTypeAdapter.hpp  common.hpp
include/fdreadoutlibs/daphne/: DAPHNEFrameProcessor.hpp  DAPHNEListRequestHandler.hpp  DAPHNEStreamFrameProcessor.hpp
include/fdreadoutlibs/ssp/: SSPFrameProcessor.hpp
include/fdreadoutlibs/tde/: TDECrateSourceEmulatorModel.hpp  TDEFrameGrouper.hpp  TDEFrameProcessor.hpp
include/fdreadoutlibs/tde/detail/: TDECrateSourceEmulatorModel.hxx
include/fdreadoutlibs/wib/: RAWWIBTriggerPrimitiveProcessor.hpp  RawWIBTp.hpp  SWWIBTriggerPrimitiveProcessor.hpp  TPEmulatorModel.hpp  WIBFrameProcessor.hpp  WIBTPHandler.hpp
include/fdreadoutlibs/wib/tpg/: DesignFIR.hpp  FrameExpand.hpp  ProcessAVX2.hpp  ProcessNaive.hpp  ProcessingInfo.hpp  RegisterToChannelNumber.hpp  TPGConstants.hpp
include/fdreadoutlibs/wib2/: RAWWIBTriggerPrimitiveProcessor.hpp  SWWIBTriggerPrimitiveProcessor.hpp  TPEmulatorModel.hpp  WIB2FrameProcessor.hpp  WIB2TPHandler.hpp  WIBTPHandler.hpp
include/fdreadoutlibs/wib2/tpg/: DesignFIR.hpp  FrameExpand.hpp  ProcessAVX2.hpp  ProcessAVX2FIR.hpp  ProcessNaive.hpp  ProcessRSAVX2.hpp  ProcessingInfo.hpp  ProcessingTasks.h  RegisterToChannelNumber.hpp  TPGConstants_wib2.hpp  UtilsAVX2.hpp
include/fdreadoutlibs/wibeth/: WIBEthFrameProcessor.hpp
src/: FDReadoutlibs.cpp
src/daphne/: DAPHNEFrameProcessor.cpp  DAPHNEListRequestHandler.cpp  DAPHNEStreamFrameProcessor.cpp
src/tde/: TDEFrameGrouper.cpp  TDEFrameProcessor.cpp
src/wib/tpg/: DesignFIR.cpp  FrameExpand.cpp  ProcessAVX2.cpp  ProcessingTasks.h.BUP
src/wib2/: WIB2FrameProcessor.cpp
src/wib2/tpg/: DesignFIR.cpp  FrameExpand.cpp  ProcessAVX2.cpp
test/apps/: README.md  TDEFileCreator.cxx  TestRS.py  TestSWTPGAlgorithms.cxx  WIB2AddFakeHits.cxx  WIB2BinaryFrameReader.cxx  WIB2TPProcessor.cxx  WIB2TestBench.cxx  WIBEthAddFakeHits.cxx  WIBEthTestBench.cxx
test/apps/SwtpgTest/: RSAvx.hpp  RSNaive.hpp  SwtpgAvx.hpp  SwtpgBase.hpp  SwtpgNaive.hpp  TEST.hpp  utils.hpp
unittest/: DAPHNEStreamSuperChunkTypeAdapter_test.cxx
